--- a/aws.yml
+++ b/aws.yml
@@ -52,7 +52,7 @@ min-single:
   #hdp_build_number: "auto"
   ambari_version: "2.7.3.0"
   hdp_version: "3.1.0.0"
-  hdp_build_number: "auto"
+  hdp_build_number: "78"
   database: "embedded"
   master_clients: "['ZOOKEEPER_CLIENT', 'HDFS_CLIENT']"
   master_services: "- AMBARI_SERVER\n      - METRICS_COLLECTOR\n      - METRICS_MONITOR\n      - ZOOKEEPER_SERVER\n      - NAMENODE\n      - SECONDARY_NAMENODE\n      - METRICS_MONITOR\n      - DATANODE\n      - METRICS_MONITOR"
