--- a/aws.yml
+++ b/aws.yml
@@ -47,9 +47,6 @@ min-single:
   type: "single"
   instance_type: "t2.large"
   cluster_name: "min-single"
-  #ambari_version: "2.6.2.2"
-  #hdp_version: "2.6.5.0"
-  #hdp_build_number: "auto"
   ambari_version: "2.7.3.0"
   hdp_version: "3.1.0.0"
   hdp_build_number: "78"
@@ -61,9 +58,9 @@ hdp-single:
   type: single
   instance_type: t2.xlarge
   cluster_name: hdp-single
-  ambari_version: "2.6.2.2"
-  hdp_version: "2.6.5.0"
-  hdp_build_number: auto
+  ambari_version: "2.7.3.0"
+  hdp_version: "3.1.0.0"
+  hdp_build_number: "78"
   database: postgres
   master_clients: "['ZOOKEEPER_CLIENT', 'HDFS_CLIENT', 'YARN_CLIENT', 'MAPREDUCE2_CLIENT', 'HIVE_CLIENT']"
   master_services: "- ZOOKEEPER_SERVER\n      - NAMENODE\n      - SECONDARY_NAMENODE\n      - RESOURCEMANAGER\n      - APP_TIMELINE_SERVER\n      - HISTORYSERVER\n      - HIVE_SERVER\n      - HIVE_METASTORE\n      - WEBHCAT_SERVER\n      - AMBARI_SERVER\n      - METRICS_COLLECTOR\n      - METRICS_MONITOR\n      - DATANODE\n      - NODEMANAGER\n      - HST_SERVER"
