--- a/aws.yml
+++ b/aws.yml
@@ -6,6 +6,7 @@ test-instance:
   region: us-east-1
   availability_zone: us-east-1a
   ami_id: ami-9887c6e7
+  generated_aws_properties: aws-properties/test-instance
 ######################
 
 ###### multinode configuration ######
