--- a/aws.yml
+++ b/aws.yml
@@ -7,6 +7,8 @@ test-instance:
   availability_zone: us-east-1a
   ami_id: ami-9887c6e7
   cidr_block: 10.0.0.0/24
+  enable_dns_hostnames: true
+  # Consul path to tree where AWS properties will be written
   generated_aws_properties: aws-properties/test-instance
   vpc_name: "Terraform VPC"
 ######################
