--- a/aws.yml
+++ b/aws.yml
@@ -13,6 +13,8 @@ test-instance:
   vpc_name: "Terraform VPC"
   gateway_name: "Terraform IGW"
   route_table_cidr_block_all: 0.0.0.0/0
+  subnet_name: "Terraform Subnet"
+  map_public_ip_on_launch: true
 ######################
 
 ###### multinode configuration ######
