--- a/aws.yml
+++ b/aws.yml
@@ -76,8 +76,9 @@ hive-s3:
   hdp_build_number: "78"
   database: "embedded"
   master_clients: "['ZOOKEEPER_CLIENT', 'HDFS_CLIENT', 'HIVE_CLIENT', 'MAPREDUCE2_CLIENT', 'YARN_CLIENT']"
-  master_services: "- AMBARI_SERVER\n      - METRICS_COLLECTOR\n      - METRICS_MONITOR\n      - ZOOKEEPER_SERVER\n      - NAMENODE\n      - SECONDARY_NAMENODE\n      - METRICS_MONITOR\n      - DATANODE\n      - METRICS_MONITOR\n      - HIVE_SERVER\n      - HIVE_METASTORE\n      - HISTORYSERVER\n      - TIMELINE_READER\n      - YARN_REGISTRY_DNS"
+  master_services: "- AMBARI_SERVER\n      - METRICS_COLLECTOR\n      - METRICS_MONITOR\n      - ZOOKEEPER_SERVER\n      - NAMENODE\n      - SECONDARY_NAMENODE\n      - METRICS_MONITOR\n      - DATANODE\n      - METRICS_MONITOR\n      - HIVE_SERVER\n      - HIVE_METASTORE\n      - HISTORYSERVER\n      - TIMELINE_READER\n      - YARN_REGISTRY_DNS\n      - APP_TIMELINE_SERVER\n      - NODEMANAGER\n      - RESOURCEMANAGER"
 
+  
 # single node cluster with Hive, Yarn and Mapreduce
 hdp-single:
   type: single
