--- a/aws.yml
+++ b/aws.yml
@@ -75,7 +75,7 @@ min-single:
 
 # single node cluster with Hive for work with S3
 hive-s3:
-  type: "single"
+  type: "single111"
   instance_type: "t2.xlarge"
   cluster_name: "hive-s3"
   ambari_version: "2.7.3.0"
