--- a/aws.yml
+++ b/aws.yml
@@ -74,7 +74,7 @@ min-single:
  {"name" : "DATANODE"}'
 
 # single node cluster with Hive for work with S3
-hive-s3:
+/*hive-s3:
   type: "single"
   instance_type: "t2.xlarge"
   cluster_name: "hive-s3"
@@ -103,7 +103,7 @@ hive-s3:
 {"name" : "APP_TIMELINE_SERVER"},
 {"name" : "NODEMANAGER"},
 {"name" : "RESOURCEMANAGER"}'
-
+*/
   #master_clients: "['ZOOKEEPER_CLIENT', 'HDFS_CLIENT', 'HIVE_CLIENT', 'MAPREDUCE2_CLIENT', 'YARN_CLIENT']"
   #master_services: "- AMBARI_SERVER\n      - METRICS_COLLECTOR\n      - METRICS_MONITOR\n      - ZOOKEEPER_SERVER\n      - NAMENODE\n      - SECONDARY_NAMENODE\n      - METRICS_MONITOR\n      - DATANODE\n      - METRICS_MONITOR\n      - HIVE_SERVER\n      - HIVE_METASTORE\n      - HISTORYSERVER\n      - TIMELINE_READER\n      - YARN_REGISTRY_DNS\n      - APP_TIMELINE_SERVER\n      - NODEMANAGER\n      - RESOURCEMANAGER"
 
