--- a/aws.yml
+++ b/aws.yml
@@ -56,7 +56,7 @@ min-cluster:
 
 # single node cluster with minimal services
 min-single:
-  type: "single222"
+  type: "single"
   instance_type: "t2.large"
   cluster_name: "min-single"
   ambari_version: "2.7.3.0"
@@ -74,7 +74,15 @@ min-single:
  {"name" : "DATANODE"}'
 
 # single node cluster with Hive for work with S3
-
+hive-s3:
+  type: "single"
+  instance_type: "t2.xlarge"
+  cluster_name: "hive-s3"
+  ambari_version: "2.7.3.0"
+  hdp_version: "3.1.0.0"
+  hdp_build_number: "78"
+  database: "embedded"
+  components: '{"name" : "ZOOKEEPER_CLIENT"},'
 
 # single node cluster with Hive, Yarn and Mapreduce
 hdp-single:
