--- a/aws.yml
+++ b/aws.yml
@@ -63,6 +63,7 @@ min-single:
   hdp_version: "3.1.0.0"
   hdp_build_number: "78"
   database: "embedded"
+  s3a: "true"
   components: '{"name" : "ZOOKEEPER_CLIENT"},
  {"name" : "HDFS_CLIENT"},
  {"name" : "AMBARI_SERVER"},
@@ -82,6 +83,7 @@ hive-s3:
   hdp_version: "3.1.0.0"
   hdp_build_number: "78"
   database: "postgres"
+  s3a: "true"
   components: '{"name" : "ZOOKEEPER_CLIENT"},
  {"name" : "HDFS_CLIENT"},
  {"name" : "HIVE_CLIENT"},
