--- a/aws.yml
+++ b/aws.yml
@@ -75,10 +75,10 @@ min-single:
  {"name" : "DATANODE"}'
 
 # single node cluster with Hive for work with S3
-hive-s3:
+single-hive-s3:
   type: "single"
   instance_type: "t2.xlarge"
-  cluster_name: "hive-s3"
+  cluster_name: "single-hive-s3"
   ambari_version: "2.7.3.0"
   hdp_version: "3.1.0.0"
   hdp_build_number: "78"
