--- a/aws.yml
+++ b/aws.yml
@@ -18,40 +18,6 @@ test-instance:
   security_group_name: terraform-security-group
 ######################
 
-###### multinode configuration ######
-
-max-cluster:
-  type: cluster
-  instance_type: t2.xlarge
-  no_datanodes: 1
-  cluster_name: max-cluster
-  ambari_version: "2.7.3.0"
-  hdp_version: "3.1.0.0"
-  hdp_build_number: "78"
-  database: postgres
-  ambari_services: "- AMBARI_SERVER\n      - METRICS_COLLECTOR\n      - METRICS_MONITOR\n      - JOURNALNODE\n      - APP_TIMELINE_SERVER\n      - HST_SERVER\n      - HST_AGENT\n      - HISTORYSERVER\n      - SPARK2_JOBHISTORYSERVER\n      - KNOX_GATEWAY\n      - RANGER_ADMIN\n      - RANGER_USERSYNC\n      - RANGER_KMS_SERVER\n      - YARN_REGISTRY_DNS\n      - TIMELINE_READER"
-  master_clients: "['ZOOKEEPER_CLIENT', 'HDFS_CLIENT', 'YARN_CLIENT', 'MAPREDUCE2_CLIENT', 'HIVE_CLIENT', 'TEZ_CLIENT', 'SQOOP', 'HBASE_CLIENT', 'PIG', 'SPARK2_CLIENT']"
-  master_services: "- ZOOKEEPER_SERVER\n      - NAMENODE\n      - METRICS_MONITOR\n      - JOURNALNODE\n      - ZKFC\n      - RESOURCEMANAGER\n      - HIVE_SERVER\n      - HIVE_METASTORE\n      - HBASE_MASTER\n      - HST_AGENT"
-  slave_clients: "['ZOOKEEPER_CLIENT', 'HDFS_CLIENT', 'YARN_CLIENT', 'MAPREDUCE2_CLIENT', 'HIVE_CLIENT', 'TEZ_CLIENT', 'SQOOP', 'HBASE_CLIENT', 'PIG', 'SPARK2_CLIENT']"
-  slave_services: "- METRICS_MONITOR\n      - DATANODE\n      - NODEMANAGER\n      - HST_AGENT\n      - HBASE_REGIONSERVER"
-# When installing HDP 3 the component HCAT must not be part of the blueprint.
-# When installing HDP 3 the component SLIDER must not be part of the blueprint.
-
-min-cluster:
-  type: cluster
-  instance_type: t2.large
-  no_datanodes: 4
-  cluster_name: min-cluster
-  ambari_version: "2.7.3.0"
-  hdp_version: "3.1.0.0"
-  hdp_build_number: "78"
-  database: "embedded"
-  ambari_services: "- AMBARI_SERVER\n      - METRICS_COLLECTOR\n      - METRICS_MONITOR\n      - JOURNALNODE"
-  master_clients: "['ZOOKEEPER_CLIENT', 'HDFS_CLIENT']"
-  master_services: "- ZOOKEEPER_SERVER\n      - NAMENODE\n      - METRICS_MONITOR\n      - JOURNALNODE\n      - ZKFC"
-  slave_clients: "['ZOOKEEPER_CLIENT', 'HDFS_CLIENT']"
-  slave_services: "- METRICS_MONITOR\n      - DATANODE"
-
 ############################################################
 
 # single node cluster with minimal services
@@ -107,6 +73,64 @@ single-hive-s3:
  {"name" : "NODEMANAGER"},
  {"name" : "RESOURCEMANAGER"}'
 
+
+multi-min-s3:
+  type: "cluster"
+  instance_type: "t2.large"
+  no_datanodes: 1
+  cluster_name: "multi-min-s3"
+  ambari_version: "2.7.3.0"
+  hdp_version: "3.1.0.0"
+  hdp_build_number: "78"
+  database: "embedded"
+  s3a: "true"
+  components: '{"name" : "ZOOKEEPER_CLIENT"},
+ {"name" : "HDFS_CLIENT"},
+ {"name" : "AMBARI_SERVER"},
+ {"name" : "METRICS_COLLECTOR"},
+ {"name" : "METRICS_MONITOR"},
+ {"name" : "ZOOKEEPER_SERVER"},
+ {"name" : "NAMENODE"},
+ {"name" : "SECONDARY_NAMENODE"}'
+ slave: '{"name" : "ZOOKEEPER_CLIENT"},
+{"name" : "HDFS_CLIENT"},
+{"name" : "METRICS_MONITOR"},
+{"name" : "NODEMANAGER"},
+{"name" : "DATANODE"}'
+
+###### multinode configuration ######
+
+max-cluster:
+  type: cluster
+  instance_type: t2.xlarge
+  no_datanodes: 1
+  cluster_name: max-cluster
+  ambari_version: "2.7.3.0"
+  hdp_version: "3.1.0.0"
+  hdp_build_number: "78"
+  database: postgres
+  ambari_services: "- AMBARI_SERVER\n      - METRICS_COLLECTOR\n      - METRICS_MONITOR\n      - JOURNALNODE\n      - APP_TIMELINE_SERVER\n      - HST_SERVER\n      - HST_AGENT\n      - HISTORYSERVER\n      - SPARK2_JOBHISTORYSERVER\n      - KNOX_GATEWAY\n      - RANGER_ADMIN\n      - RANGER_USERSYNC\n      - RANGER_KMS_SERVER\n      - YARN_REGISTRY_DNS\n      - TIMELINE_READER"
+  master_clients: "['ZOOKEEPER_CLIENT', 'HDFS_CLIENT', 'YARN_CLIENT', 'MAPREDUCE2_CLIENT', 'HIVE_CLIENT', 'TEZ_CLIENT', 'SQOOP', 'HBASE_CLIENT', 'PIG', 'SPARK2_CLIENT']"
+  master_services: "- ZOOKEEPER_SERVER\n      - NAMENODE\n      - METRICS_MONITOR\n      - JOURNALNODE\n      - ZKFC\n      - RESOURCEMANAGER\n      - HIVE_SERVER\n      - HIVE_METASTORE\n      - HBASE_MASTER\n      - HST_AGENT"
+  slave_clients: "['ZOOKEEPER_CLIENT', 'HDFS_CLIENT', 'YARN_CLIENT', 'MAPREDUCE2_CLIENT', 'HIVE_CLIENT', 'TEZ_CLIENT', 'SQOOP', 'HBASE_CLIENT', 'PIG', 'SPARK2_CLIENT']"
+  slave_services: "- METRICS_MONITOR\n      - DATANODE\n      - NODEMANAGER\n      - HST_AGENT\n      - HBASE_REGIONSERVER"
+# When installing HDP 3 the component HCAT must not be part of the blueprint.
+# When installing HDP 3 the component SLIDER must not be part of the blueprint.
+
+min-cluster:
+  type: cluster
+  instance_type: t2.large
+  no_datanodes: 4
+  cluster_name: min-cluster
+  ambari_version: "2.7.3.0"
+  hdp_version: "3.1.0.0"
+  hdp_build_number: "78"
+  database: "embedded"
+  ambari_services: "- AMBARI_SERVER\n      - METRICS_COLLECTOR\n      - METRICS_MONITOR\n      - JOURNALNODE"
+  master_clients: "['ZOOKEEPER_CLIENT', 'HDFS_CLIENT']"
+  master_services: "- ZOOKEEPER_SERVER\n      - NAMENODE\n      - METRICS_MONITOR\n      - JOURNALNODE\n      - ZKFC"
+  slave_clients: "['ZOOKEEPER_CLIENT', 'HDFS_CLIENT']"
+  slave_services: "- METRICS_MONITOR\n      - DATANODE"
 
 # single node cluster with Hive, Yarn and Mapreduce
 hdp-single:
