--- a/aws.yml
+++ b/aws.yml
@@ -30,7 +30,7 @@ single-min-s3:
   hdp_build_number: "78"
   database: "embedded"
   s3a: "true"
-  components: '{"name" : "ZOOKEEPER_CLIENT"},
+  master_services: '{"name" : "ZOOKEEPER_CLIENT"},
  {"name" : "HDFS_CLIENT"},
  {"name" : "AMBARI_SERVER"},
  {"name" : "METRICS_COLLECTOR"},
@@ -85,8 +85,7 @@ multi-min-s3:
   s3a: "true"
   ambari_services: '{"name" : "AMBARI_SERVER"},
  {"name" : "METRICS_MONITOR"},
- {"name" : "METRICS_COLLECTOR"},
- {"name" : "JOURNALNODE"}'
+ {"name" : "METRICS_COLLECTOR"}'
   master_services: '{"name" : "ZOOKEEPER_CLIENT"},
  {"name" : "HDFS_CLIENT"},
  {"name" : "METRICS_MONITOR"},
