--- a/aws.yml
+++ b/aws.yml
@@ -10,7 +10,7 @@ aws:
   enable_dns_hostnames: true
   # Consul path to tree where AWS properties will be written
   # path_to_generated_aws_properties: aws-properties/test-instance
-  #path_to_generated_aws_properties: 
+  path_to_generated_aws_properties: "generated_aws_properties"
   vpc_name: "Terraform VPC"
   gateway_name: "Terraform IGW"
   route_table_cidr_block_all: 0.0.0.0/0
