--- a/aws.yml
+++ b/aws.yml
@@ -1,20 +1,18 @@
 ---
 
-###### instance configuration ######
-
-aws:
-  region: us-east-1
-  availability_zone: us-east-1a
-  ami_id: ami-9887c6e7
-  cidr_block: 10.0.0.0/24
-  enable_dns_hostnames: true
-  # Consul path to tree where AWS properties will be written
-  # path_to_generated_aws_properties: aws-properties/test-instance
-  path_to_generated_aws_properties: "generated_aws_properties"
-  vpc_name: "Terraform VPC"
-  gateway_name: "Terraform IGW"
-  route_table_cidr_block_all: 0.0.0.0/0
-  subnet_name: "Terraform Subnet"
-  map_public_ip_on_launch: true
-  security_group_name: terraform-security-group
+###### infrastructure configuration ######
+region: us-east-1
+availability_zone: us-east-1a
+ami_id: ami-9887c6e7
+cidr_block: 10.0.0.0/24
+enable_dns_hostnames: true
+# Consul path to tree where AWS properties will be written
+# path_to_generated_aws_properties: aws-properties/test-instance
+path_to_generated_aws_properties: "generated_aws_properties"
+vpc_name: "Terraform VPC"
+gateway_name: "Terraform IGW"
+route_table_cidr_block_all: 0.0.0.0/0
+subnet_name: "Terraform Subnet"
+map_public_ip_on_launch: true
+security_group_name: terraform-security-group
 ######################
