--- a/hdp.yml
+++ b/hdp.yml
@@ -89,40 +89,59 @@ max-cluster:
   hdp_version: "3.1.0.0"
   hdp_build_number: "78"
   database: postgres
-  ambari_services: "- AMBARI_SERVER\n      - METRICS_COLLECTOR\n      - METRICS_MONITOR\n      - JOURNALNODE\n      - APP_TIMELINE_SERVER\n      - HST_SERVER\n      - HST_AGENT\n      - HISTORYSERVER\n      - SPARK2_JOBHISTORYSERVER\n      - KNOX_GATEWAY\n      - RANGER_ADMIN\n      - RANGER_USERSYNC\n      - RANGER_KMS_SERVER\n      - YARN_REGISTRY_DNS\n      - TIMELINE_READER"
-  master_clients: "['ZOOKEEPER_CLIENT', 'HDFS_CLIENT', 'YARN_CLIENT', 'MAPREDUCE2_CLIENT', 'HIVE_CLIENT', 'TEZ_CLIENT', 'SQOOP', 'HBASE_CLIENT', 'PIG', 'SPARK2_CLIENT']"
-  master_services: "- ZOOKEEPER_SERVER\n      - NAMENODE\n      - METRICS_MONITOR\n      - JOURNALNODE\n      - ZKFC\n      - RESOURCEMANAGER\n      - HIVE_SERVER\n      - HIVE_METASTORE\n      - HBASE_MASTER\n      - HST_AGENT"
-  slave_clients: "['ZOOKEEPER_CLIENT', 'HDFS_CLIENT', 'YARN_CLIENT', 'MAPREDUCE2_CLIENT', 'HIVE_CLIENT', 'TEZ_CLIENT', 'SQOOP', 'HBASE_CLIENT', 'PIG', 'SPARK2_CLIENT']"
-  slave_services: "- METRICS_MONITOR\n      - DATANODE\n      - NODEMANAGER\n      - HST_AGENT\n      - HBASE_REGIONSERVER"
+  s3a: "true"
+  ambari_services: '{"name" : "AMBARI_SERVER"},
+ {"name" : "METRICS_MONITOR"},
+ {"name" : "METRICS_COLLECTOR"},
+ {"name" : "JOURNALNODE"},
+ {"name" : "APP_TIMELINE_SERVER"},
+ {"name" : "HST_SERVER"},
+ {"name" : "HST_AGENT"},
+ {"name" : "HISTORYSERVER"},
+ {"name" : "SPARK2_JOBHISTORYSERVER"},
+ {"name" : "KNOX_GATEWAY"},
+ {"name" : "RANGER_ADMIN"},
+ {"name" : "RANGER_USERSYNC"},
+ {"name" : "RANGER_KMS_SERVER"},
+ {"name" : "YARN_REGISTRY_DNS"},
+ {"name" : "TIMELINE_READER"}'
+  master_services: '{"name" : "ZOOKEEPER_CLIENT"},
+ {"name" : "HDFS_CLIENT"},
+ {"name" : "METRICS_MONITOR"},
+ {"name" : "ZOOKEEPER_SERVER"},
+ {"name" : "NAMENODE"},
+ {"name" : "ZKFC"},
+ {"name" : "JOURNALNODE"},
+ {"name" : "YARN_CLIENT"},
+ {"name" : "MAPREDUCE2_CLIENT"},
+ {"name" : "HIVE_CLIENT"},
+ {"name" : "TEZ_CLIENT"},
+ {"name" : "SQOOP"},
+ {"name" : "HBASE_CLIENT"},
+ {"name" : "PIG"},
+ {"name" : "SPARK2_CLIENT"},
+ {"name" : "RESOURCEMANAGER"},
+ {"name" : "HIVE_SERVER"},
+ {"name" : "HIVE_METASTORE"},
+ {"name" : "HBASE_MASTER"},
+ {"name" : "HST_AGENT"}'
+  slave_services: '{"name" : "ZOOKEEPER_CLIENT"},
+ {"name" : "HDFS_CLIENT"},
+ {"name" : "METRICS_MONITOR"},
+ {"name" : "DATANODE"},
+ {"name" : "NODEMANAGER"},
+ {"name" : "HST_AGENT"},
+ {"name" : "HBASE_REGIONSERVER"},
+ {"name" : "YARN_CLIENT"},
+ {"name" : "MAPREDUCE2_CLIENT"},
+ {"name" : "HIVE_CLIENT"},
+ {"name" : "TEZ_CLIENT"},
+ {"name" : "SQOOP"},
+ {"name" : "HBASE_CLIENT"},
+ {"name" : "PIG"},
+ {"name" : "SPARK2_CLIENT"}'
 # When installing HDP 3 the component HCAT must not be part of the blueprint.
 # When installing HDP 3 the component SLIDER must not be part of the blueprint.
-
-min-cluster:
-  type: cluster
-  instance_type: t2.large
-  no_datanodes: 4
-  cluster_name: min-cluster
-  ambari_version: "2.7.3.0"
-  hdp_version: "3.1.0.0"
-  hdp_build_number: "78"
-  database: "embedded"
-  ambari_services: "- AMBARI_SERVER\n      - METRICS_COLLECTOR\n      - METRICS_MONITOR\n      - JOURNALNODE"
-  master_clients: "['ZOOKEEPER_CLIENT', 'HDFS_CLIENT']"
-  master_services: "- ZOOKEEPER_SERVER\n      - NAMENODE\n      - METRICS_MONITOR\n      - JOURNALNODE\n      - ZKFC"
-  slave_clients: "['ZOOKEEPER_CLIENT', 'HDFS_CLIENT']"
-  slave_services: "- METRICS_MONITOR\n      - DATANODE"
-
-# single node cluster with Hive, Yarn and Mapreduce
-hdp-single:
-  type: single
-  instance_type: t2.xlarge
-  cluster_name: hdp-single
-  ambari_version: "2.7.3.0"
-  hdp_version: "3.1.0.0"
-  hdp_build_number: "78"
-  database: "embedded"
-  master_clients: "['ZOOKEEPER_CLIENT', 'HDFS_CLIENT', 'YARN_CLIENT', 'MAPREDUCE2_CLIENT', 'HIVE_CLIENT']"
-  master_services: "- ZOOKEEPER_SERVER\n      - NAMENODE\n      - SECONDARY_NAMENODE\n      - RESOURCEMANAGER\n      - APP_TIMELINE_SERVER\n      - HISTORYSERVER\n      - HIVE_SERVER\n      - HIVE_METASTORE\n      - AMBARI_SERVER\n      - METRICS_COLLECTOR\n      - METRICS_MONITOR\n      - DATANODE\n      - NODEMANAGER\n      - HST_SERVER\n      - YARN_REGISTRY_DNS\n      - TIMELINE_READER"
 # When installing HDP 3 the component WEBHCAT_SERVER must not be part of the blueprint.
 
 
