--- a/hdp.yml
+++ b/hdp.yml
@@ -28,7 +28,7 @@ single-ranger:
   ambari_version: "2.7.3.0"
   hdp_version: "3.1.0.0"
   hdp_build_number: "78"
-  database: "embedded"
+  database: "postgres"
   s3a: "true"
   master_services: '{"name" : "ZOOKEEPER_CLIENT"},
  {"name" : "HDFS_CLIENT"},
