--- a/hdp.yml
+++ b/hdp.yml
@@ -39,9 +39,11 @@ single-ranger:
  {"name" : "NAMENODE"},
  {"name" : "SECONDARY_NAMENODE"},
  {"name" : "DATANODE"},
- {"name" : "RANGER_ADMIN"},
- {"name" : "RANGER_USERSYNC"},
- {"name" : "RANGER_KMS_SERVER"}'
+ {"name" : "RANGER_ADMIN"}'
+
+ #,
+ #{"name" : "RANGER_USERSYNC"},
+ #{"name" : "RANGER_KMS_SERVER"}'
 
 # single node cluster with Hive for work with S3
 single-hive-s3:
