--- a/spark.yml
+++ b/spark.yml
@@ -1,3 +1,5 @@
 test-cluster:
   instance_type: t2.micro
-  no_workers: 3
+  instance_type_master: t2.micro
+  instance_type_worker: t2.micro
+  no_workers: 5
