--- a/spark.yml
+++ b/spark.yml
@@ -1,6 +1,12 @@
 # this one is just to show working cluster
-test-cluster:
+test-local:
   instance_type_master: t2.micro
   instance_type_worker: t2.micro
   no_workers: 1
   execute_file: run_local_pi_test.yml
+
+test-cluster:
+  instance_type_master: t2.small
+  instance_type_worker: t2.small
+  no_workers: 1
+  execute_file: run_cluster_pi_test.yml
