--- a/spark.yml
+++ b/spark.yml
@@ -7,6 +7,6 @@ test-local:
 
 test-cluster:
   instance_type_master: t2.small
-  instance_type_worker: t2.small
+  instance_type_worker: t2.medium
   no_workers: 1
   execute_file: run_cluster_pi_test.yml
