--- a/spark.yml
+++ b/spark.yml
@@ -1,16 +1,18 @@
 # this one is just to show working cluster
-
 test-local:
+  instance_tag: lr_iris
+  ami: "ami-0eb0892f46a18e1de"
   instance_type_master: t2.micro
   instance_type_worker: t2.micro
   no_workers: 1
-  execute_file: run_local_pi_test.yml
+  input_file: s3a://hdp-hive-s3/test/iris.csv
+  output_folder: s3a://hdp-hive-s3/test/git_iris_out
+  spark_job_name: "Run linear regression on iris"
 
 test-cluster:
   instance_type_master: t2.small
   instance_type_worker: t2.medium
   no_workers: 1
-  execute_file: run_cluster_pi_test.yml
 
 lr-iris:
   instance_tag: lr_iris
