--- a/spark.yml
+++ b/spark.yml
@@ -24,3 +24,10 @@ lr-iris:
   input_file: s3a://hdp-hive-s3/test/iris.csv
   output_folder: s3a://hdp-hive-s3/test/git_iris_out
   spark_job_name: "Run linear regression on iris"
+
+log-reg-iris:
+  instance_tag: lr_iris
+  ami: "ami-0eb0892f46a18e1de"
+  instance_type_master: t2.micro
+  instance_type_worker: t2.micro
+  no_workers: 1
