--- a/spark.yml
+++ b/spark.yml
@@ -21,6 +21,7 @@ log-reg-iris:
   instance_type_master: t2.micro
   instance_type_worker: t2.micro
   no_workers: 1
+  run_file: "pyspark/lr_iris/lr_iris.py"
   input_file: "s3a://hdp-hive-s3/test/iris.csv"
   output_folder: "s3a://hdp-hive-s3/test/git_iris_out"
   spark_job_name: "Run linear regression on iris dataset"
