--- a/spark.yml
+++ b/spark.yml
@@ -26,5 +26,5 @@ log-reg-iris:
   spark_job_name: "Run linear regression on iris dataset"
   github_repo: "https://github.com/markokole/ds-code-for-ias.git"
   github_dest: "/home/centos/ds-code-for-ias"
-  spark_job_string: "pyspark/lr_iris/lr_iris.py;s3a://hdp-hive-s3/test/iris.csv;s3a://hdp-hive-s3/test/git_iris_out"
+  spark_job_args: "s3a://hdp-hive-s3/test/iris.csv;s3a://hdp-hive-s3/test/git_iris_out"
   exec_path: "pyspark/lr_iris/lr_iris.py"
