--- a/spark.yml
+++ b/spark.yml
@@ -18,7 +18,7 @@ log-reg-iris:
   ami: "ami-0eb0892f46a18e1de"
   instance_type_master: t2.micro
   instance_type_worker: t2.micro
-  no_workers: 2
+  no_workers: 1
   spark_job_name: "Run linear regression on iris dataset"
   git_repo: "https://github.com/markokole/ds-code-for-ias.git"
   git_dest: "/home/centos/ds-code-for-ias"
@@ -31,9 +31,9 @@ log-reg-santander:
   ami: "ami-0eb0892f46a18e1de"
   instance_type_master: t2.small
   instance_type_worker: t2.medium
-  no_workers: 2
+  no_workers: 1
   spark_job_name: "Run linear regression on santander dataset"
   git_repo: "https://github.com/markokole/ds-code-for-ias.git"
   git_dest: "/home/centos/ds-code-for-ias"
-  spark_job_args: "s3a://hdp-hive-s3/santander/train.csv/s3a://hdp-hive-s3/santander/accuracy"
+  spark_job_args: "s3a://hdp-hive-s3/santander/train.csv;s3a://hdp-hive-s3/santander/accuracy"
   exec_path: "pyspark/santander/lr_santander.py"
