--- a/kafka.yml
+++ b/kafka.yml
@@ -1,11 +1,11 @@
-single-node:
-  instance_tag: single
-  ami: ""
-  instance_type: "t2.micro"
-  no_nodes: "1"
-
-multi-node:
-  instance_tag: multi
+min-cluster:
+  instance_tag: min
   ami: ""
   instance_type: "t2.micro"
   no_nodes: "3"
+
+five-cluster:
+  instance_tag: five
+  ami: ""
+  instance_type: "t2.micro"
+  no_nodes: "5"
