--- a/aws.yml
+++ b/aws.yml
@@ -3,6 +3,7 @@
 ###### infrastructure configuration ######
 region: us-east-1
 availability_zone: us-east-1a
+key_pair: mykeypair
 ami_id: ami-9887c6e7
 cidr_block: 10.0.0.0/24
 enable_dns_hostnames: true
