--- a/kafka.yml
+++ b/kafka.yml
@@ -1,5 +1,5 @@
 min-cluster:
-  instance_tag: min
+  instance_tag: "min"
   ami: ""
   instance_type: "t2.small"
   no_nodes: "3"
@@ -7,9 +7,16 @@ min-cluster:
   kafka_url: "http://apache.uib.no/kafka/2.2.0/kafka_2.12-2.2.0.tgz"
 
 five-cluster:
-  instance_tag: five
+  instance_tag: "five"
   ami: ""
   instance_type: "t2.small"
   no_nodes: "5"
+  zookeeper_url: "http://apache.uib.no/zookeeper/zookeeper-3.4.14/zookeeper-3.4.14.tar.gz"
+  kafka_url: "http://apache.uib.no/kafka/2.2.0/kafka_2.12-2.2.0.tgz"
+
+large-cluster:
+  instance_tag: "large"
+  instance_type: "a1.large"
+  no_nodes: "3"
   zookeeper_url: "http://apache.uib.no/zookeeper/zookeeper-3.4.14/zookeeper-3.4.14.tar.gz"
   kafka_url: "http://apache.uib.no/kafka/2.2.0/kafka_2.12-2.2.0.tgz"
