--- a/kafka.yml
+++ b/kafka.yml
@@ -14,9 +14,9 @@ five-cluster:
   zookeeper_url: "http://apache.uib.no/zookeeper/zookeeper-3.4.14/zookeeper-3.4.14.tar.gz"
   kafka_url: "http://apache.uib.no/kafka/2.2.0/kafka_2.12-2.2.0.tgz"
 
-large-cluster:
-  instance_tag: "large"
-  instance_type: "a1.large"
+medium-cluster:
+  instance_tag: "medium"
+  instance_type: "t2.medium"
   no_nodes: "3"
   zookeeper_url: "http://apache.uib.no/zookeeper/zookeeper-3.4.14/zookeeper-3.4.14.tar.gz"
   kafka_url: "http://apache.uib.no/kafka/2.2.0/kafka_2.12-2.2.0.tgz"
