--- a/kafka.yml
+++ b/kafka.yml
@@ -14,6 +14,7 @@ five-cluster:
   zookeeper_url: "http://apache.uib.no/zookeeper/zookeeper-3.4.14/zookeeper-3.4.14.tar.gz"
   kafka_url: "http://apache.uib.no/kafka/2.2.0/kafka_2.12-2.2.0.tgz"
 
+#new
 medium-cluster:
   instance_tag: "medium"
   ami: ""
