--- a/kafka.yml
+++ b/kafka.yml
@@ -14,16 +14,15 @@ five-cluster:
   zookeeper_url: "http://apache.uib.no/zookeeper/zookeeper-3.4.14/zookeeper-3.4.14.tar.gz"
   kafka_url: "http://apache.uib.no/kafka/2.2.0/kafka_2.12-2.2.0.tgz"
 
-#new
-medium-cluster:
-  instance_tag: "medium"
+single-cluster:
+  instance_tag: "kafka_single"
   ami: ""
   instance_type: "t2.medium"
-  no_nodes: "3"
+  no_nodes: "1"
   zookeeper_url: "http://apache.uib.no/zookeeper/zookeeper-3.4.14/zookeeper-3.4.14.tar.gz"
   kafka_url: "http://apache.uib.no/kafka/2.2.0/kafka_2.12-2.2.0.tgz"
 
-medium2-cluster:
+medium-cluster:
   instance_tag: "medium"
   ami: ""
   instance_type: "t2.medium"
