--- a/azure.yml
+++ b/azure.yml
@@ -1,6 +1,8 @@
 ---
+
+path_to_generated_azure_properties: "generated"
+
 test: 
   provision_resource_group: "1"
   customer: "testcustomer"
   location: "westeurope"
-  
