--- a/spark.yml
+++ b/spark.yml
@@ -21,7 +21,7 @@ log-reg-iris:
   spark_job_name: "Run linear regression on iris dataset"
   git_repo: "https://github.com/markokole/ds-code-for-ias.git"
   git_dest: "/home/centos/ds-code-for-ias"
-  spark_job_args: "s3a://hdp-hive-s3/test/iris.csv;s3a://hdp-hive-s3/test/git_iris_out"
+#  spark_job_args: "s3a://hdp-hive-s3/test/iris.csv;s3a://hdp-hive-s3/test/git_iris_out"
   exec_path: "pyspark/lr_iris/lr_iris.py"
 
 # linear regression on iris dataset with spark
